--- a/index.html
+++ b/index.html
@@ -126,6 +126,19 @@ div.desc {
     </div>
 </div>
 
+<div class="responsive">
+    <div class="gallery">
+      <video width="400" controls>
+          <source src="img/mov_bbb.mp4" type="video/mp4">
+          Your browser does not support HTML video.
+        </video>
+      <div class="desc">Mesto Rab rožice.</div>
+    </div>
+</div>
+
+
+    
+
 
 
 <div class="clearfix"></div>
