--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ div.desc {
 <div class="responsive">
     <div class="gallery">
          <video width="320" height="240" controls>
-          <source src="img/v_vodi_1_480p.mov" type="video/mov">
+          <source src="img/v_vodi_1_480p.mov" type="video/MOV">
             Your browser does not support the video tag.
         </video>
       <div class="desc">V vodi 1.</div>
