--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@ div.desc {
 <div class="responsive">
     <div class="gallery">
          <video width="320" height="240" controls>
-          <source src="img/v_vodi_1_480p.mov" type="video/MOV">
+          <source src="img/v_vodi_1_480p.mov" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-      <div class="desc">V vodi 2.</div>
+      <div class="desc">V vodi 3.</div>
     </div>
 </div>
     
