--- a/index.html
+++ b/index.html
@@ -125,6 +125,42 @@ div.desc {
       <div class="desc">Mesto Rab rožice.</div>
     </div>
 </div>
+
+<div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img/kamp_3.JPG">
+        <img src="img/Mesto_Rab_4_roze.JPG" alt="Kamp." width="600" height="400">
+      </a>
+      <div class="desc">Kamp.</div>
+    </div>
+</div>
+
+<div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img/plaza_3.JPG">
+        <img src="img/Mesto_Rab_4_roze.JPG" alt="Plaža." width="600" height="400">
+      </a>
+      <div class="desc">Plaža.</div>
+    </div>
+</div>
+
+<div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img/plaza_4.JPG">
+        <img src="img/Mesto_Rab_4_roze.JPG" alt="Plaža." width="600" height="400">
+      </a>
+      <div class="desc">Plaža.</div>
+    </div>
+</div>
+
+<div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="img/riba_1.JPG">
+        <img src="img/Mesto_Rab_4_roze.JPG" alt="riba_1." width="600" height="400">
+      </a>
+      <div class="desc">riba_1.</div>
+    </div>
+</div>
     
 <div class="responsive">
     <div class="gallery">
