--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ div.desc {
 <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="img/kamp_3.JPG">
-        <img src="img/Mesto_Rab_4_roze.JPG" alt="Kamp." width="600" height="400">
+        <img src="img/kamp_3.JPG" alt="Kamp." width="600" height="400">
       </a>
       <div class="desc">Kamp.</div>
     </div>
@@ -138,7 +138,7 @@ div.desc {
 <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="img/plaza_3.JPG">
-        <img src="img/Mesto_Rab_4_roze.JPG" alt="Plaža." width="600" height="400">
+        <img src="img/plaza_3.JPG" alt="Plaža." width="600" height="400">
       </a>
       <div class="desc">Plaža.</div>
     </div>
@@ -147,7 +147,7 @@ div.desc {
 <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="img/plaza_4.JPG">
-        <img src="img/Mesto_Rab_4_roze.JPG" alt="Plaža." width="600" height="400">
+        <img src="img/plaza_4.JPG" alt="Plaža." width="600" height="400">
       </a>
       <div class="desc">Plaža.</div>
     </div>
@@ -156,7 +156,7 @@ div.desc {
 <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="img/riba_1.JPG">
-        <img src="img/Mesto_Rab_4_roze.JPG" alt="riba_1." width="600" height="400">
+        <img src="img/riba_1.JPG" alt="riba_1." width="600" height="400">
       </a>
       <div class="desc">riba_1.</div>
     </div>
